--- a/src/components/explainPanel.scss
+++ b/src/components/explainPanel.scss
@@ -115,6 +115,7 @@ $color2:#f9f;
     border-radius:1em;
     font-size:0.7em;
     transition: all 0.5s;
+    border:1px dashed;
 }
 
 .wrp-ep-menu{
