--- a/src/components/readPanel.scss
+++ b/src/components/readPanel.scss
@@ -5,7 +5,7 @@
     color:#0D141E;
     font:19px / 34px 汉仪旗黑50S, HYQiHei-50s, 'PingFang SC', -apple-system, 'SF UI Text', 'Lucida Grande', STheiti, 'Microsoft YaHei', sans-serif;
     border-radius:3px;
-    padding:2em;
+    // padding:2em;
 }
 
 @media (min-width:60em){
