--- a/src/components/explainPanel.scss
+++ b/src/components/explainPanel.scss
@@ -2,18 +2,47 @@ $color:#efe;
 $color2:#f9f;
 
 .explain-panel{
+    box-shadow:var(--shadow);
+    // border: 0.5px solid var(--sc);
     transition:all 0.15s ease-out;
     opacity:1;
+    border-radius:var(--b-radius);
+    z-index:10009;
+    font-size:var(--font-size);
 }
 .explain-hidden{
     opacity:0;
     pointer-events: none;
 }
-.wrp-ep-arrow{
+.wrp-ep-arrow-container{
     pointer-events:none;
-    display:flex;
+    transform:rotate(45deg);
+    width:2.8em;
+    height:2.8em;
+    transform-origin: center;
+    padding:0 !important;
+}
+.wrp-ep-arrow{
+    width:2.8em;
+    height:2.8em;
+    // background-color:#fff;
+    box-shadow:var(--shadow);
+    // border: 0.5px solid var(--sc);
+    // backdrop-filter:var(--blur);
+    background-color:var(--t-back-c);
+    transform:rotate3d(1,1,0, 60deg);
+    transform-origin: center;
 }
 
+.wrp-explain-content{
+    position:absolute;
+    top:0;right:0;bottom:0;left:0;
+    // background-color:#fff;
+    // backdrop-filter:var(--blur);
+    background-color:var(--t-back-c);
+
+    border-radius:var(--b-radius);
+}
 
 .wrp-ep-title{
     padding:0.3em 0.8em 0 0.8em;
@@ -30,7 +59,7 @@ $color2:#f9f;
 .wrp-title-word{
     font-size:1.2em !important;
     padding-bottom:0.26em !important;
-    color:#444 !important;
+    color: var(--t-fore-c) !important;
     margin-block-start:0 !important;
     margin-block-end:0 !important;
     font-weight:700 !important;
@@ -112,13 +141,14 @@ $color2:#f9f;
     padding:0.2em;
 }
 .more-word{
-    background-color:$color2;
+    background-color:var(--sc);
+    box-shadow:var(--shadow-2);
+    color:var(--t-back-c);
     padding:0.2em 0.4em;
     margin-left:0.3em;
-    border-radius:1em;
+    border-radius:var(--b-radius);
     font-size:0.7em;
     transition: all 0.5s;
-    border:1px dashed;
 }
 
 .wrp-ep-menu{
@@ -132,15 +162,15 @@ $color2:#f9f;
     padding:0.5em;
     box-sizing: border-box;
     border:1px dashed;
-    backdrop-filter: blur(30px);
-    -webkit-backdrop-filter: blur(30px);
-    background-color:rgba(255,255,255,0.6);
+    // background-color:rgba(255,255,255,0.6);
+    color:var(--t-fore-c);
 }
 .menu-button{
     width:1em;
     height:1em;
     padding:0.5em;
     transition:all 0.3s;
+    box-sizing:content-box !important;
 }
 
 .menu-button:active{
@@ -149,7 +179,17 @@ $color2:#f9f;
 
 .wrp-explain-text{
     font-weight: 400 !important;
+    color:var(--t-fore-c);
 }
 .wrp-explain-tag{
     font-weight: 400 !important;
+    color:var(--t-fore-c2);
+}
+
+.wrp-ep-loading{
+    width:100%;
+    height:100%;
+    display:flex;
+    justify-content:center;
+    align-items:center;
 }
