--- a/src/components/readPanel.css
+++ b/src/components/readPanel.css
@@ -1,13 +1,30 @@
 @charset "UTF-8";
-.read-panel {
+#wrp-read-panel {
   background-color: #fff;
   color: #0D141E;
   font: 19px / 34px 汉仪旗黑50S, HYQiHei-50s, 'PingFang SC', -apple-system, 'SF UI Text', 'Lucida Grande', STheiti, 'Microsoft YaHei', sans-serif;
   border-radius: 3px;
-  padding: 2em; }
+  overflow: scroll; }
 
-@media (min-width: 60em) {
-  .read-panel {
-    width: 40em; } }
+.wrp-read-panel a:active {
+  border-radius: var(--b-radius);
+  box-shadow: var(--shadow-2); }
+
+#wrp-rp-menu {
+  position: fixed;
+  background-color: var(--t-back-c);
+  padding: .3em;
+  border-radius: var(--b-radius);
+  top: 3em;
+  left: 3em;
+  z-index: 10000;
+  box-shadow: var(--shadow-3); }
+
+.wrp-rp-hidden {
+  opacity: 0;
+  pointer-events: none; }
+
+.wrp-rp-remove {
+  display: none; }
 
 /*# sourceMappingURL=readPanel.css.map */
