--- a/src/components/translatePanel.scss
+++ b/src/components/translatePanel.scss
@@ -1,14 +1,51 @@
 $shadow:0px 0px 5px rgba(0,0,0,0.3);
+
 .wrp-translate-panel{
     // backdrop-filter: blur(60px);
-    background-color:#fff;
+    background-color:rgba(255,255,255,0.95);
     width:100%;
     position:fixed;
     border-radius:10px 10px 0 0;
     box-shadow:$shadow;
     padding:1.5em;
     box-sizing:border-box;
-    transition:all .03s ease-out;
+    transition:all .3s ease-out;
+    font-size:var(--font-size);
+    z-index:10000;
+    pointer-events:all;
+}
+.wrp-tp-handle{
+    position:absolute;
+    width:2.5em;
+    height:1em;
+    box-sizing:border-box;
+    // border-width:1px;
+    // border-style:solid;
+    // border-color:var(--t-fore-c) transparent;
+    top:0.3em;
+    left:calc((100% - 2.5em) / 2);
+    padding:0.3em;
+    color:var(--t-fore-c2);
+}
+.wrp-tp-handle::before{
+    // background-color:var(--t-fore-c2);
+    border: 0.5px solid;
+    display:block;
+    width:100%;
+    height:0px;
+    content:' ';
+    margin-bottom:0.3em;
+}
+.wrp-tp-handle::after{
+    // background-color:var(--t-fore-c2);
+    border: 0.5px solid;
+    display:block;
+    width:100%;
+    height:0px;
+    content:' ';
+}
+.wrp-tp-handle:active{
+    color:var(--sc);
 }
 
 @media(min-width:60em){
@@ -18,5 +55,4 @@ $shadow:0px 0px 5px rgba(0,0,0,0.3);
         left:10em;
         right:10em;
     }
-
 }
