--- a/src/home.scss
+++ b/src/home.scss
@@ -1,6 +1,6 @@
 .wrp-app-logo-container{
     text-align:center;
-    padding:5em 0;
+    padding:3em 0;
     display:flex;
     justify-content:center;
     align-items:center;
@@ -20,22 +20,25 @@
 
 
 .wrp-input-container{
+    position:relative;
     box-sizing:border-box;
-    padding:0 20px;
+    padding:3em 0;
 }
 
 .wrp-input-bar{
+    position:relative;
     display:flex;
     height:2.4em;
     border-radius:1.2em;
-    justify-content:center;
-    border:1px #1b82fe solid;
+    justify-content:space-between;
+    border:1px var(--sc) solid;
     box-sizing:border-box;
     align-items:center;
     overflow:hidden;
+    min-width:14em;
 }
 .wrp-input-bar:active{
-    box-shadow: 0 0 0 0.2em rgba(#1b82fe, 0.3)
+    box-shadow: 0 0 0 0.2em rgba(var(--sc-rgb), 0.3)
 }
 
 input{
@@ -44,10 +47,15 @@ input{
 }
 
 .wrp-input{    
-    height:2em;
-    width:-webkit-fill-available;
+    height:100%;
+    width:calc(100% - 3.6em);    
+    // width:fill-available;
+    // width:-webkit-fill-available;
     box-sizing:border-box;
-    padding-left:1.2em;
+    padding:0 1.2em 0 1.2em;
+}
+.wrp-input-typing{
+    width:calc(100% - 8.4em);
 }
 .wrp-input-bar-button{
     height:2.4em;
@@ -66,7 +74,8 @@ input{
 .wrp-input-bar-go{
     height:2.4em;
     width:3.6em;
-    background-color: #1b82fe;
+    background-color: var(--sc);
+    border-radius: 0 1.2em  1.2em 0;
 }
 .wrp-input-bar-go > *{
     margin:0.4em 1em;
@@ -80,6 +89,7 @@ input{
     left:0;
     right:0;
     bottom:0;
-    padding-top:1em;
     background-color:#fff;
+    padding:20px;
+    z-index:2;
 }
