--- a/src/components/translatePanel.css
+++ b/src/components/translatePanel.css
@@ -2,8 +2,8 @@
   background-color: rgba(255, 255, 255, 0.95);
   width: 100%;
   position: fixed;
-  border-radius: 10px 10px 0 0;
-  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
+  border-radius: 10px 15px 0 0;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
   padding: 1.5em;
   box-sizing: border-box;
   transition: all .3s ease-out;
@@ -19,7 +19,8 @@
   top: 0.3em;
   left: calc((100% - 2.5em) / 2);
   padding: 0.3em;
-  color: var(--t-fore-c2); }
+  color: var(--t-fore-c2);
+  --active-color: transparent; }
 
 .wrp-tp-handle::before {
   border: 0.5px solid;
@@ -27,17 +28,20 @@
   width: 100%;
   height: 0px;
   content: ' ';
-  margin-bottom: 0.3em; }
+  margin-bottom: 0.3em;
+  box-shadow: 0 0 5px var(--active-color); }
 
 .wrp-tp-handle::after {
   border: 0.5px solid;
   display: block;
   width: 100%;
   height: 0px;
-  content: ' '; }
+  content: ' ';
+  box-shadow: 0 0 5px var(--active-color); }
 
 .wrp-tp-handle:active {
-  color: var(--sc); }
+  color: var(--sc);
+  --active-color: var(--sc); }
 
 @media (min-width: 60em) {
   .wrp-translate-panel {
