--- a/src/components/translatePanel.scss
+++ b/src/components/translatePanel.scss
@@ -1,11 +1,11 @@
-$shadow:0px 0px 5px rgba(0,0,0,0.3);
+$shadow:0px 0px 10px rgba(0,0,0,0.1);
 
 .wrp-translate-panel{
     // backdrop-filter: blur(60px);
     background-color:rgba(255,255,255,0.95);
     width:100%;
     position:fixed;
-    border-radius:10px 10px 0 0;
+    border-radius:10px 15px 0 0;
     box-shadow:$shadow;
     padding:1.5em;
     box-sizing:border-box;
@@ -26,6 +26,7 @@ $shadow:0px 0px 5px rgba(0,0,0,0.3);
     left:calc((100% - 2.5em) / 2);
     padding:0.3em;
     color:var(--t-fore-c2);
+    --active-color: transparent;
 }
 .wrp-tp-handle::before{
     // background-color:var(--t-fore-c2);
@@ -35,6 +36,7 @@ $shadow:0px 0px 5px rgba(0,0,0,0.3);
     height:0px;
     content:' ';
     margin-bottom:0.3em;
+    box-shadow: 0 0 5px var(--active-color);
 }
 .wrp-tp-handle::after{
     // background-color:var(--t-fore-c2);
@@ -43,9 +45,12 @@ $shadow:0px 0px 5px rgba(0,0,0,0.3);
     width:100%;
     height:0px;
     content:' ';
+    box-shadow: 0 0 5px var(--active-color);
+
 }
 .wrp-tp-handle:active{
     color:var(--sc);
+    --active-color: var(--sc);
 }
 
 @media(min-width:60em){
