--- a/src/components/translatePanel.css
+++ b/src/components/translatePanel.css
@@ -2,11 +2,11 @@
   background-color: rgba(255, 255, 255, 0.95);
   width: 100%;
   position: fixed;
-  border-radius: 10px 15px 0 0;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  border-radius: 15px 15px 0 0;
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.35);
   padding: 1.5em;
   box-sizing: border-box;
-  transition: all .3s ease-out;
+  transition: all .3s ease-in-out;
   font-size: var(--font-size);
   z-index: 10000;
   pointer-events: all; }
