--- a/src/components/explanation.scss
+++ b/src/components/explanation.scss
@@ -30,7 +30,7 @@ $color2:#f9f;
     width:2.8em;
     height:2.8em;
     // background-color:#fff;
-    box-shadow:var(--shadow);
+    box-shadow:var(--shadow-arrow);
     // border: 0.5px solid var(--sc);
     // backdrop-filter:var(--blur);
     background-color:var(--t-back-c);
