history fix & build

--- a/src/components/explanation.scss
+++ b/src/components/explanation.scss
@@ -227,7 +227,7 @@ $color2:#f9f;
     color:var(--t-fore-c2);
 }
 
-.wrp-ep-loading{
+.wrp-ep-other-content{
     width:100%;
     height:100%;
     display:flex;
