--- a/src/components/explanation.css
+++ b/src/components/explanation.css
@@ -193,7 +193,7 @@
   font-weight: 400 !important;
   color: var(--t-fore-c2); }
 
-.wrp-ep-loading {
+.wrp-ep-other-content {
   width: 100%;
   height: 100%;
   display: flex;
