--- a/src/components/readPanel.scss
+++ b/src/components/readPanel.scss
@@ -28,7 +28,7 @@
     border-radius:var(--b-radius);
     top:3em;
     left:3em;
-    z-index:10000;
+    z-index:999999999999999999999999999;
     box-shadow:var(--shadow-3);
 }
 
