--- a/src/components/explanation.scss
+++ b/src/components/explanation.scss
@@ -1,237 +1,238 @@
-$color:#efe;
-$color2:#f9f;
+$color: #efe;
+$color2: #f9f;
 
-.explain-panel{
-    box-shadow:var(--shadow);
-    // border: 0.5px solid var(--sc);
-    transition:all 0.15s ease-out;
-    opacity:1;
-    border-radius:var(--b-radius);
-    z-index:10009;
-    font-size:var(--font-size);
-    width: 17em;
-    height:8em;
-    position:absolute;
+.explain-panel {
+  box-shadow: var(--shadow);
+  // border: 0.5px solid var(--sc);
+  transition: all 0.15s ease-out;
+  opacity: 1;
+  border-radius: var(--b-radius);
+  z-index: 99999999999999999999999999;
+  font-size: var(--font-size);
+  width: 17em;
+  height: 8em;
+  position: absolute;
 }
-.explain-hidden{
-    opacity:0;
-    pointer-events: none;
+.explain-hidden {
+  opacity: 0;
+  pointer-events: none;
 }
-.wrp-ep-arrow-container{
-    position:absolute;
-    pointer-events:none;
-    transform:rotate(45deg);
-    width:2.8em;
-    height:2.8em;
-    transform-origin: center;
-    padding:0 !important;
+.wrp-ep-arrow-container {
+  position: absolute;
+  pointer-events: none;
+  transform: rotate(45deg);
+  width: 2.8em;
+  height: 2.8em;
+  transform-origin: center;
+  padding: 0 !important;
 }
-.wrp-ep-arrow{
-    width:2.8em;
-    height:2.8em;
-    // background-color:#fff;
-    box-shadow:var(--shadow-arrow);
-    // border: 0.5px solid var(--sc);
-    // backdrop-filter:var(--blur);
-    background-color:var(--t-back-c);
-    transform:rotate3d(1,1,0, 60deg);
-    transform-origin: center;
-}
-
-.wrp-explain-content{
-    position:absolute;
-    top:0;right:0;bottom:0;left:0;
-    // background-color:#fff;
-    // backdrop-filter:var(--blur);
-    background-color:var(--t-back-c);
-
-    border-radius:var(--b-radius);
+.wrp-ep-arrow {
+  width: 2.8em;
+  height: 2.8em;
+  // background-color:#fff;
+  box-shadow: var(--shadow-arrow);
+  // border: 0.5px solid var(--sc);
+  // backdrop-filter:var(--blur);
+  background-color: var(--t-back-c);
+  transform: rotate3d(1, 1, 0, 60deg);
+  transform-origin: center;
 }
 
-.wrp-ep-title{
-    padding:0.8em 0.8em 0 0.8em;
-    display:flex;
-    align-items:center;
-    justify-content:space-between;
-    height:2em;
-    box-sizing:border-box;
-}
-.wrp-title-left{
-    display:flex;
-    align-items:center;
+.wrp-explain-content {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  // background-color:#fff;
+  // backdrop-filter:var(--blur);
+  background-color: var(--t-back-c);
+
+  border-radius: var(--b-radius);
 }
 
-.wrp-title-word{
-    font-size:1.2em !important;
-    padding-bottom:0.26em !important;
-    color: var(--t-fore-c) !important;
-    margin-block-start:0 !important;
-    margin-block-end:0 !important;
-    font-weight:700 !important;
+.wrp-ep-title {
+  padding: 0.8em 0.8em 0 0.8em;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 2em;
+  box-sizing: border-box;
+}
+.wrp-title-left {
+  display: flex;
+  align-items: center;
 }
 
-.title-tts{
-    display:inline-flex;
-    padding:0.3em 0 0.3em 0.6em;
-    align-items:center;
-    font-size:0.7em;
+.wrp-title-word {
+  font-size: 1.2em !important;
+  padding-bottom: 0.26em !important;
+  color: var(--t-fore-c) !important;
+  margin-block-start: 0 !important;
+  margin-block-end: 0 !important;
+  font-weight: 700 !important;
 }
 
-.title-audio{
-    display:inline-block;
-    padding-left:0.3em;
-    width:2em;
-    height:2em;
-    transition:all 0.1s;
-    
-}
-@keyframes wrp-audio{
-    0%{
-        opacity:1;
-        transform:scale(1);
-    }
-    50%{
-        opacity:0.5s;
-        transform:scale(0.92);
-    }
-    100%{
-        opacity:1;
-        transform:scale(1);
-    }
-}
-.title-audio:active{
-    transform:scale(1.3);
+.title-tts {
+  display: inline-flex;
+  padding: 0.3em 0 0.3em 0.6em;
+  align-items: center;
+  font-size: 0.7em;
 }
 
-.wrp-title-button{
-    padding:0.3em;
-    width:1em;
-    height:1em;
-    transition:all 0.3s;
-    transform-origin:center;
-    box-sizing:content-box !important;
+.title-audio {
+  display: inline-block;
+  padding-left: 0.3em;
+  width: 2em;
+  height: 2em;
+  transition: all 0.1s;
 }
-.wrp-title-button:active{
-    transform:scale(1.3);
+@keyframes wrp-audio {
+  0% {
+    opacity: 1;
+    transform: scale(1);
+  }
+  50% {
+    opacity: 0.5s;
+    transform: scale(0.92);
+  }
+  100% {
+    opacity: 1;
+    transform: scale(1);
+  }
 }
-.expl-menu-show{
-    transform:rotate(0deg);
-}
-
-.expl-menu-hidden{
-    transform:rotate(-270deg);
-}
-
-.wrp-ep-content{
-    position:relative;
-    padding:0 0.8em 0.8em 0.8em;
-    font-size:1em;
-    height:6em;
-    overflow:hidden;
-    box-sizing: border-box;
-
-    dl{
-        position: relative;
-        overflow-y:auto;
-        scrollbar-width:0;
-        height:5.6em;
-        margin-block-start:0;
-        margin-block-end:0;
-        font-size:0.9em;
-        padding-top:0.5em;
-        line-height:1.6em;
-    }
-    dl::-webkit-scrollbar{
-        display: none;
-    }
+.title-audio:active {
+  transform: scale(1.3);
 }
 
-.more-word-contanier{
-    position:absolute;
-    display:flex;
-    align-items:center;
-    padding:0.8em;
-    bottom:0;
-    right:0;
-    justify-content: flex-end;
-    flex-direction: row-reverse;
-    box-sizing:border-box;
-
-    span {
-        background-color:var(--sc);
-        box-shadow:var(--shadow-2);
-        color:var(--t-back-c);
-        padding:0.2em 0.5em;
-        margin:1em 0 0 1em;
-        border-radius:var(--b-radius);
-        font-size:0.65em;
-        transition: all 0.5s;
-    }
+.wrp-title-button {
+  padding: 0.3em;
+  width: 1em;
+  height: 1em;
+  transition: all 0.3s;
+  transform-origin: center;
+  box-sizing: content-box !important;
 }
-.unfold-button{
-    display: inline-block;
-    padding:0 0.1rem;
+.wrp-title-button:active {
+  transform: scale(1.3);
 }
-.more-unfold{
-    width:100%;
-    flex-wrap:wrap;
-    flex-direction:row;
+.expl-menu-show {
+  transform: rotate(0deg);
 }
 
-.wrp-ep-menu{
-    position: absolute;
-    top:0;
-    // right:-20em;
-    right:0;
-    opacity:0;
-    transition:all 0.5s;
-    width:100%;
-    height:100%;
-    padding:0.5em 0.8em 0.8em 0.8em;
+.expl-menu-hidden {
+  transform: rotate(-270deg);
+}
+
+.wrp-ep-content {
+  position: relative;
+  padding: 0 0.8em 0.8em 0.8em;
+  font-size: 1em;
+  height: 6em;
+  overflow: hidden;
+  box-sizing: border-box;
+
+  dl {
+    position: relative;
+    overflow-y: auto;
+    scrollbar-width: 0;
+    height: 5.6em;
+    margin-block-start: 0;
+    margin-block-end: 0;
+    font-size: 0.9em;
+    padding-top: 0.5em;
+    line-height: 1.6em;
+  }
+  dl::-webkit-scrollbar {
+    display: none;
+  }
+}
+
+.more-word-contanier {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  padding: 0.8em;
+  bottom: 0;
+  right: 0;
+  justify-content: flex-end;
+  flex-direction: row-reverse;
+  box-sizing: border-box;
+
+  span {
+    background-color: var(--sc);
+    box-shadow: var(--shadow-2);
+    color: var(--t-back-c);
+    padding: 0.2em 0.5em;
+    margin: 1em 0 0 1em;
     border-radius: var(--b-radius);
-    box-sizing: border-box;
-    // border:1px dashed;
-    // background-color:rgba(255,255,255,0.6);
-    color:var(--t-fore-c);
-    backdrop-filter:blur(5px);
-    user-select:none;
-    pointer-events: none;
-
+    font-size: 0.65em;
+    transition: all 0.5s;
+  }
 }
-.wrp-expl-menu-show{
-    right:0;
-    opacity:1;
-    background:rgba(255,255,255,0.8);
-    backdrop-filter:blur(5px);
-    opacity:1;
-    pointer-events: all;
+.unfold-button {
+  display: inline-block;
+  padding: 0 0.1rem;
 }
-.menu-button{
-    width:1em;
-    height:1em;
-    padding:0.5em;
-    transition:all 0.3s;
-    box-sizing:content-box !important;
+.more-unfold {
+  width: 100%;
+  flex-wrap: wrap;
+  flex-direction: row;
 }
 
-.menu-button:active{
-    transform:scale(1.3);
+.wrp-ep-menu {
+  position: absolute;
+  top: 0;
+  // right:-20em;
+  right: 0;
+  opacity: 0;
+  transition: all 0.5s;
+  width: 100%;
+  height: 100%;
+  padding: 0.5em 0.8em 0.8em 0.8em;
+  border-radius: var(--b-radius);
+  box-sizing: border-box;
+  // border:1px dashed;
+  // background-color:rgba(255,255,255,0.6);
+  color: var(--t-fore-c);
+  backdrop-filter: blur(5px);
+  user-select: none;
+  pointer-events: none;
+}
+.wrp-expl-menu-show {
+  right: 0;
+  opacity: 1;
+  background: rgba(255, 255, 255, 0.8);
+  backdrop-filter: blur(5px);
+  opacity: 1;
+  pointer-events: all;
+}
+.menu-button {
+  width: 1em;
+  height: 1em;
+  padding: 0.5em;
+  transition: all 0.3s;
+  box-sizing: content-box !important;
 }
 
-.wrp-explain-text{
-    font-weight: 400 !important;
-    color:var(--t-fore-c);
-}
-.wrp-explain-tag{
-    font-weight: 400 !important;
-    color:var(--t-fore-c2);
+.menu-button:active {
+  transform: scale(1.3);
 }
 
-.wrp-ep-other-content{
-    width:100%;
-    height:100%;
-    display:flex;
-    justify-content:center;
-    align-items:center;
-    overflow: hidden;
+.wrp-explain-text {
+  font-weight: 400 !important;
+  color: var(--t-fore-c);
+}
+.wrp-explain-tag {
+  font-weight: 400 !important;
+  color: var(--t-fore-c2);
+}
+
+.wrp-ep-other-content {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
 }
