--- a/src/components/navBar.scss
+++ b/src/components/navBar.scss
@@ -6,7 +6,7 @@
     border-top:0.3px solid rgba(0, 0, 0, 0.6);
     backdrop-filter:var(--blur);
     background-color:var(--blur-bg);
-    z-index:10009;
+    z-index:var(--z-index);
     font-size:var(--font-size);
     pointer-events:all;
 }
