--- a/src/common.scss
+++ b/src/common.scss
@@ -85,6 +85,7 @@
     box-sizing:border-box;
     pointer-events: none;
     z-index: var(--z-index);
+    overflow: hidden;
 }
 .wrp-page{
     width:100%;
