--- a/src/components/explanation.scss
+++ b/src/components/explanation.scss
@@ -16,6 +16,7 @@ $color2: #f9f;
 .explain-hidden {
   opacity: 0;
   pointer-events: none;
+  top: 0;
 }
 .wrp-ep-arrow-container {
   position: absolute;
