--- a/src/components/translatePanel.scss
+++ b/src/components/translatePanel.scss
@@ -2,7 +2,7 @@ $shadow: 0px 0px 20px rgba(0, 0, 0, 0.35);
 
 .wrp-translate-panel {
   // backdrop-filter: blur(60px);
-  background-color: rgba(255, 255, 255, 0.95);
+  background-color: rgba(255, 255, 255, 1);
   width: 100%;
   position: fixed;
   border-radius: 15px 15px 0 0;
@@ -28,13 +28,12 @@ $shadow: 0px 0px 20px rgba(0, 0, 0, 0.35);
   padding: 0.3em;
   color: var(--t-fore-c2);
   --active-color: var(--t-back-c2);
-  &::before {
+  > div {
     background-color: var(--active-color);
     display: block;
     width: 100%;
     height: 6px;
     border-radius: 3px;
-    content: " ";
     margin-bottom: 0.3em;
   }
   &:active {
