--- a/src/components/navBar.scss
+++ b/src/components/navBar.scss
@@ -1,17 +1,53 @@
-.wrp-nav{
-    position:fixed;
-    bottom:0;
-    left:0;
-    right:0;
-    border-top:0.3px solid rgba(0, 0, 0, 0.6);
-    backdrop-filter:var(--blur);
-    background-color:var(--blur-bg);
-    z-index:var(--z-index);
-    font-size:var(--font-size);
-    pointer-events:all;
+.wrp-nav {
+  position: fixed;
+  width: 100vw;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  border-top: 0.3px solid rgba(0, 0, 0, 0.6);
+  backdrop-filter: var(--blur);
+  background-color: var(--blur-bg);
+  z-index: var(--z-index);
+  font-size: var(--font-size);
+  pointer-events: all;
 }
-.wrp-nav-item-container{
-    display:flex;
-    justify-content:space-around;
-    align-items:center;
+.wrp-nav-item-container {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+
+  > a {
+    text-decoration: none;
+  }
+}
+
+.wrp-nav-hidden {
+  bottom: -100%;
+}
+
+.wrp-nav-item {
+  width: 3.6em;
+  height: 3.6em;
+  color: #555;
+  font-size: 1em;
+  text-align: center;
+  box-sizing: border-box;
+  padding: 0.2em;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.wrp-nav-item-icon {
+  display: block;
+  width: 1.8em;
+  height: 1.8em;
+}
+.wrp-nav-item-title {
+  font-size: 0.6em;
+  line-height: 1.2;
+  text-align: center;
+  color: var(--c-dark);
+  padding-top: 0.3em;
+  width: 100%;
+  text-decoration: none;
 }
