--- a/src/common.scss
+++ b/src/common.scss
@@ -1,74 +1,74 @@
-:root{
-    --sc: #1b82fe;
-    --sc-rgb:27,130,254;
+:root {
+  --sc: #1b82fe;
+  --sc-rgb: 27, 130, 254;
 
-    --c-dark:#595959;
-    --c-light:#ffffff;
-    --b-radius:5px;
+  --c-dark: #595959;
+  --c-light: #ffffff;
+  --b-radius: 5px;
 
-    // 模糊背景
-    --blur:blur(30px);
-    --blur-bg:rgba(255,255,255,0.9);
+  // 模糊背景
+  --blur: blur(30px);
+  --blur-bg: rgba(255, 255, 255, 0.9);
 
-    // 主题
-    --t-back-c:#ffffff;
-    --t-back-c2:#eaeaea;    
-    --t-fore-c:#555555;
-    --t-fore-c2:#696969;
+  // 主题
+  --t-back-c: #ffffff;
+  --t-back-c2: #eaeaea;
+  --t-fore-c: #555555;
+  --t-fore-c2: #696969;
 
-    // 主题-成功/失败
-    --t-c-e:255, 0, 0;
-    --t-c-s:27, 130, 254;
+  // 主题-成功/失败
+  --t-c-e: 255, 0, 0;
+  --t-c-s: 27, 130, 254;
 
-    --shadow:0 0 0 1px rgba(var(--sc-rgb), 1);
-    --shadow-arrow:0 0 0 1.3px rgba(var(--sc-rgb), 1);
-    --shadow-2: 0 0 0 3px rgba(var(--sc-rgb), 0.3);
-    --shadow-3: 2px 2px 8px rgba(85,85,85,0.3);
-    --font-size:14px !important;
+  --shadow: 0 0 0 1px rgba(var(--sc-rgb), 1);
+  --shadow-arrow: 0 0 0 1.3px rgba(var(--sc-rgb), 1);
+  --shadow-2: 0 0 0 3px rgba(var(--sc-rgb), 0.3);
+  --shadow-3: 2px 2px 10px rgba(200, 200, 200, 0.5);
+  --font-size: 14px !important;
 
-    --z-index: 99999999999999999999;
+  --z-index: 99999999999999999999;
 }
 
-.wrp-icon{
-    position:relative;
-    display:inline-block;
-    width:3em;
-    height:3em;
+.wrp-icon {
+  position: relative;
+  display: inline-block;
+  width: 3em;
+  height: 3em;
 }
 
-.wrp-icon-svg{
-    width:100%;
-    height:100%;
+.wrp-icon-svg {
+  width: 100%;
+  height: 100%;
 }
 
-.wrp-text{
-    padding:0.5em 0.3em;
-    color:var(--t-fore-c);
-    word-wrap: break-word;
+.wrp-text {
+  padding: 0.5em 0.3em;
+  color: var(--t-fore-c);
+  word-wrap: break-word;
 }
 
-.wrp-warning{
-    color:rgba(var(--t-c-e),1);
+.wrp-warning {
+  color: rgba(var(--t-c-e), 1);
 }
 
-#wrp-app{
+#wrp-app {
 }
 
-.wrp-view{
-    width:100vw;
-    height:100vh;
-    position:fixed;
-    top:0;left:0;
-    box-sizing:border-box;
-    pointer-events: none;
-    overflow: hidden;
-    z-index: var(--z-index);
+.wrp-view {
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  box-sizing: border-box;
+  pointer-events: none;
+  overflow: hidden;
+  z-index: var(--z-index);
 }
 
-.wrp-page{
-    width:100%;
-    padding:20px 20px 3em 20px;
-    box-sizing:border-box;
-    position:relative;
+.wrp-page {
+  width: 100%;
+  padding: 20px 20px 3em 20px;
+  box-sizing: border-box;
+  position: relative;
 }
-
