--- a/src/components/readPanel.scss
+++ b/src/components/readPanel.scss
@@ -7,6 +7,8 @@
     border-radius:3px;
     // padding:2em;
     overflow:scroll;
+    width: 100vw;
+    height: 100vh;
 }
 
 .wrp-read-panel a:active{
