--- a/src/components/translatePanel.scss
+++ b/src/components/translatePanel.scss
@@ -11,7 +11,7 @@ $shadow: 0px 0px 20px rgba(0, 0, 0, 0.35);
   box-sizing: border-box;
   transition: all 0.3s ease-in-out;
   font-size: var(--font-size);
-  z-index: 10000;
+  // z-index: 10000;
   pointer-events: all;
 }
 .wrp-tp-handle {
