word & about page

--- a/packages/website/components/View/view.module.scss
+++ b/packages/website/components/View/view.module.scss
@@ -1,4 +1,15 @@
+.view-root {
+    position: relative;
 
-.view-container{
-    
+    .container {
+        width: 100%;
+        height: 100vh;
+        > iframe {
+            z-index: -1;
+        }
+        .backdrop {
+            z-index: 2;
+            pointer-events: none;
+        }
+    }
 }
